fix html & css (overflow)

--- a/CE.ClientApp/src/index.scss
+++ b/CE.ClientApp/src/index.scss
@@ -5,24 +5,15 @@
 @import "src/components/sidebar/index";
 @import "src/components/dropdowns/index";
 
-//.view-buttons {
-//  position: sticky;
-//  top: 4rem;
-//}
-
-
 body {
-  min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  margin-right: calc(-1 * (100vw - 100%));
+  padding-right: 0 !important;
 }
 
 body.dark {
   color: $gray-300;
   background-color: $gray-700;
-
-  //.bg-primary {
-  //  background-color: $gray-900 !important;
-  //}
 }
 
 .focus-within:focus-within {
@@ -36,11 +27,6 @@ body.dark {
 .navbar {
   height: $height-navbar;
 }
-
-.scroll-area {
-  height: calc(100vh - #{$height-navbar});
-}
-
 
 .btn-tab {
   display: flex;
@@ -108,6 +94,18 @@ body.dark {
       }
     }
   }
+}
+
+.action-buttons-portal {
+  position: fixed;
+  bottom: 0;
+  width: 100vw;
+}
+
+.action-buttons-wrapper {
+  position: absolute;
+  bottom: var(--bs-gutter-x, 0.75rem);
+  right: var(--bs-gutter-x, 0.75rem);
 }
 
 
